--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 <body>
     <div id="container">
         <h1>Bienvenido al sorteador de cartas</h1>
-        <button onclick="getCarta()">Obtener carta</button>
+        <button onclick="getCarta()" id="boton1">Obtener carta</button>
     </div>
     <div>
         <p id="carta1" class="carta"></p>
+        <button class="invisible" id="boton2">Obtener otra carta</button>
         <p id="carta2" class="carta"></p>
+        <button class="invisible" id="boton3">Obtener otra carta</button>
         <p id="carta3" class="carta"></p>
-        <p id="carta4"></p>
-        <p id="carta5"></p>
+        <button class="invisible" id="boton4">Obtener otra carta</button>
+        <p id="carta4" class="carta"></p>
+        <button class="invisible" id="boton5">Obtener otra carta</button>
+        <p id="carta5" class="carta"></p>
     </div>
 </body>
 <script src="script.js"></script>
